plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
   id 'org.beryx.jlink' version '3.1.4-rc'
   // id 'org.beryx.jpackage' version '3.1.4-rc'
}

group 'com.luukien'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.luukien.javacard'
    mainClass = 'com.luukien.javacard.ShopCardApplication'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.1.2')
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude(group: 'org.openjfx')
    }
    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation("org.postgresql:postgresql:42.7.7")

    implementation("at.favre.lib:bcrypt:0.10.2")

    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    compileOnly("org.projectlombok:lombok:1.18.42")
    // https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http45
    implementation("com.cloudinary:cloudinary-http45:1.39.0")
    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
    implementation("org.bouncycastle:bcprov-jdk18on:1.82")
    // https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail
    implementation("com.sun.mail:jakarta.mail:2.0.2")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip =  layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug',  '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

